Added dbInitializer, service, controllers and CRUD views for SportEvent. Added SportController and SportIndex. Added ViewModels for SportComplex and SportEvent. Modified SportComplexController and SportComplexService. Added AutoMapper for SportComplex and SportEvent. Updated styles for all Sport views

--- a/UtopiaCity/UtopiaCity.csproj
+++ b/UtopiaCity/UtopiaCity.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <Folder Include="Services\Common\" />
+    <Folder Include="wwwroot\images\sport-complexes\" />
   </ItemGroup>
 
 </Project>
