--- a/UtopiaCity/UtopiaCity.csproj
+++ b/UtopiaCity/UtopiaCity.csproj
@@ -8,6 +8,26 @@
   <ItemGroup>
     <Compile Remove="Data\Migrations\AirportMigrations\20210810070154_test.cs" />
     <Compile Remove="Data\Migrations\AirportMigrations\20210810070154_test.Designer.cs" />
+    <Compile Update="Resources\Controllers\PublicCatering\RestaurantListView.en.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>RestaurantListView.en.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Resources\Controllers\PublicCatering\RestaurantListView.ru.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>RestaurantListView.ru.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Resources\Views\PublicCatering\Restaurant\RestaurantsListView.en.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>RestaurantListView.en.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Resources\Views\PublicCatering\Restaurant\RestaurantsListView.ru.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>RestaurantListView.ru.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +43,25 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Controllers\PublicCatering\RestaurantListView.en.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>RestaurantListView.en.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\Controllers\PublicCatering\RestaurantListView.ru.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>RestaurantListView.ru.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\Views\PublicCatering\Restaurant\RestaurantsListView.en.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>RestaurantsListView.en.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\Views\PublicCatering\Restaurant\RestaurantsListView.ru.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>RestaurantsListView.ru.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
