--- a/UtopiaCity/UtopiaCity.csproj
+++ b/UtopiaCity/UtopiaCity.csproj
@@ -5,6 +5,11 @@
     <UserSecretsId>aspnet-UtopiaCity-D45A5F96-DE8D-4785-9915-4DEAA6419C9C</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Data\Migrations\20210819122726_FromTimelineDev.cs" />
+    <Compile Remove="Data\Migrations\20210819122726_FromTimelineDev.Designer.cs" />
+  </ItemGroup>
+
 
 
   <ItemGroup>
