Added controllers, services, viewModel, mapper, CRUD views for "RequestToAdministration".  Modified SportComplexInitializer, SportEventService. Added new method in the "SportComplexService". Updated Views for "Sport" and "SportComplex"

--- a/UtopiaCity/UtopiaCity.csproj
+++ b/UtopiaCity/UtopiaCity.csproj
@@ -8,6 +8,8 @@
 
 
   <ItemGroup>
+    <Compile Remove="Data\Migrations\20210823115809_SportComplexOnDeleteBehaviorForRequestToAdministration.cs" />
+    <Compile Remove="Data\Migrations\20210823115809_SportComplexOnDeleteBehaviorForRequestToAdministration.Designer.cs" />
     <Compile Remove="Data\Migrations\AirportMigrations\20210810070154_test.cs" />
     <Compile Remove="Data\Migrations\AirportMigrations\20210810070154_test.Designer.cs" />
   </ItemGroup>
