Add Custom Mail service Use CityAdministraion ResidentAccountService to assign house owner

--- a/UtopiaCity/UtopiaCity.csproj
+++ b/UtopiaCity/UtopiaCity.csproj
@@ -29,7 +29,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\Migrations\" />
     <Folder Include="Services\Common\" />
+    <Folder Include="wwwroot\images\HousingSystem\" />
   </ItemGroup>
 
 </Project>
