--- a/UtopiaCity/UtopiaCity.csproj
+++ b/UtopiaCity/UtopiaCity.csproj
@@ -46,16 +46,7 @@
 
   <ItemGroup>
     <Folder Include="Services\Common\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Views\CitizenFriends\FindUser.cshtml" />
-    <None Include="Views\CitizenFriends\FindUserAsync.cshtml" />
-    <None Include="Views\CitizenFriends\IndexFriends.cshtml" />
-    <None Include="Views\CitizenFriends\IndexRejected.cshtml" />
-    <None Include="Views\CitizenFriends\IndexWaiting.cshtml" />
-    <None Include="Views\CitizenFriends\_IndexPartial.cshtml" />
-    <None Include="Views\CitizenFriends\_ViewStart.cshtml" />
+    <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
 </Project>
