Add Intitializers for appUser, Task, Friend, Talk,Message tables Add controler for chat functionality Add service for chatController Remove old migratons, Add models  and views for chatcontroller Add style for chat controller Fix bugs

--- a/UtopiaCity/UtopiaCity.csproj
+++ b/UtopiaCity/UtopiaCity.csproj
@@ -24,6 +24,8 @@
     <Compile Remove="Data\Migrations\20210823115809_SportComplexOnDeleteBehaviorForRequestToAdministration.Designer.cs" />
     <Compile Remove="Data\Migrations\20210823115858_SportComplexOnDeleteBehaviorForRequestToAdministration.cs" />
     <Compile Remove="Data\Migrations\20210823115858_SportComplexOnDeleteBehaviorForRequestToAdministration.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210904093440_CitizenChat.cs" />
+    <Compile Remove="Data\Migrations\20210904093440_CitizenChat.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,8 +45,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\Common\" />
     <Folder Include="Data\Migrations\" />
+    <Folder Include="Services\Common\" />
     <Folder Include="wwwroot\images\HousingSystem\" />
   </ItemGroup>
 
