Add buy, spent functionality Add service for work with citizenfinancecontroller add some Viewmodels add transaction table add views. Remove migrations

--- a/UtopiaCity/UtopiaCity.csproj
+++ b/UtopiaCity/UtopiaCity.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\Migrations\" />
     <Folder Include="Services\Common\" />
     <Folder Include="wwwroot\images\HousingSystem\" />
   </ItemGroup>
