I hide userName and SectretWord in appsettings.json

--- a/UtopiaCity/UtopiaCity.csproj
+++ b/UtopiaCity/UtopiaCity.csproj
@@ -53,4 +53,6 @@
     <Folder Include="wwwroot\images\HousingSystem\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
