--- a/UtopiaCity/appsettings.json
+++ b/UtopiaCity/appsettings.json
@@ -13,5 +13,9 @@
     "ClearDb": "false",
     "SeedDb": "true"
   },
+  "MailConnecton": {
+    "UserName": "7f7147a5a8b1f7",
+    "Password": "0d363e85632846"
+  },
   "AllowedHosts": "*"
 }
